<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myorderheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="@string/myorder"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="400dp"
        android:text="@string/TotalCost"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myorderheading" />

    <TextView
        android:id="@+id/totalcostamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="61dp"
        android:text="@string/amount"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toEndOf="@+id/totalcost"
        app:layout_constraintTop_toBottomOf="@+id/myorderheading" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="86dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myorderheading"
        app:srcCompat="@drawable/female"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/profilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/profilename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepic" />

    <TextView
        android:id="@+id/yourOrderHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="121dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myorderheading" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:id="@+id/rv_ordered_items"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/yourOrderHeading"
        app:layout_constraintTop_toBottomOf="@+id/profilename" />

</androidx.constraintlayout.widget.ConstraintLayout>